Simplified ShaderCompiler cmake script

--- a/tools/CoralShaderCompilerHeadless/CMakeLists.txt
+++ b/tools/CoralShaderCompilerHeadless/CMakeLists.txt
@@ -21,7 +21,6 @@ source_group("cmake/" FILES ${CORAL_SHADER_COMPILER_HEADLESS_CMAKE_FILE})
 
 add_executable(${CORAL_SHADER_COMPILER_HEADLESS_TARGET_NAME})
 
-
 ###############################################################################
 # Configure the target
 ###############################################################################
@@ -38,7 +37,7 @@ coral_configure_target(${CORAL_SHADER_COMPILER_HEADLESS_TARGET_NAME}
 # Create the CMake shader compiler command
 ###############################################################################
 
-set(CORAL_SHADER_COMPILER_HEADLESS_EXECUTABLE ${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>/${CORAL_SHADER_COMPILER_HEADLESS_TARGET_NAME}.exe)
+set(CORAL_SHADER_COMPILER_HEADLESS_EXECUTABLE $<TARGET_FILE:${CORAL_SHADER_COMPILER_HEADLESS_TARGET_NAME}>)
 
 configure_file(${CORAL_SHADER_COMPILER_HEADLESS_CMAKE_FILE} ${CMAKE_BINARY_DIR}/CoralShaderCompiler.cmake @ONLY)
 
