--- a/examples/CoralDemoApp/CMakeLists.txt
+++ b/examples/CoralDemoApp/CMakeLists.txt
@@ -93,3 +93,13 @@ foreach(FILE ${CORAL_DEMO_APP_RESOURCES})
     add_custom_command(TARGET ${CORAL_DEMO_APP_TARGET_NAME} POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_if_different ${FILE} ${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>/resources/)
 endforeach()
+
+###############################################################################
+# Copy the shared library files
+###############################################################################
+
+get_target_property(CORAL_TARGET_TYPE Coral TYPE)
+if(${CORAL_TARGET_TYPE} STREQUAL "SHARED_LIBRARY")
+    add_custom_command(TARGET ${CORAL_DEMO_APP_TARGET_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:Coral> ${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>/)
+endif()
