--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,11 @@ jobs:
                       cmake-generator: Unix Makefiles
                       cmake-args: "-DCMAKE_BUILD_TYPE=Release -DCORAL_BUILD_TESTS=OFF -DCORAL_BUILD_EXAMPLES=OFF"
                       compiler: "gcc"
+                    - name: Linux Clang 17
+                      os: ubuntu-latest
+                      cmake-generator: Unix Makefiles
+                      cmake-args: "-DCMAKE_BUILD_TYPE=Release -DCORAL_BUILD_TESTS=OFF -DCORAL_BUILD_EXAMPLES=OFF"
+                      compiler: "clang"
         steps:
             # Checkout the Coral repository
             - name: Checkout
@@ -34,23 +39,23 @@ jobs:
               if: runner.os == 'linux' 
               run: |
                     sudo apt update
-                    sudo apt install libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev libwayland-dev libxkbcommon-dev
+                    sudo apt install libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev libwayland-dev libxkbcommon-dev libc++-dev libc++abi-dev
 
             # Install GCC (Linux only)
             - name: Install GCC 12 (Linux)
-              if: runner.os == 'linux' 
+              if: matrix.compiler == 'gcc'
               uses:  egor-tensin/setup-gcc@v1
               with:
                 version: 12
                 platform: x64
 
             # Install Clang 17 (Linux only)
-            #- name: Install Clang 17 (Linux)
-            #  if: runner.os == 'linux' 
-            #  uses:  egor-tensin/setup-clang@v1
-            #  with:
-            #    version: 17
-            #    platform: x64
+            - name: Install Clang 17 (Linux)
+              if: matrix.compiler == 'clang'
+              uses:  egor-tensin/setup-clang@v1
+              with:
+                version: 17
+                platform: x64
 
             # Configure the Coral CMake project
             - name: Configure CMake
