--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
                       cmake-generator: Unix Makefiles
                       cmake-args: "-DCMAKE_BUILD_TYPE=Release -DCORAL_BUILD_TESTS=OFF -DCORAL_BUILD_EXAMPLES=OFF"
                       compiler: "gcc"
-                    - name: Linux Clang 17
+                    - name: Linux Clang 19
                       os: ubuntu-latest
                       cmake-generator: Unix Makefiles
                       cmake-args: "-DCMAKE_BUILD_TYPE=Release -DCORAL_BUILD_TESTS=OFF -DCORAL_BUILD_EXAMPLES=OFF"
@@ -39,7 +39,7 @@ jobs:
               if: runner.os == 'linux' 
               run: |
                     sudo apt update
-                    sudo apt install libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev libwayland-dev libxkbcommon-dev libc++-dev libc++abi-dev
+                    sudo apt install libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev libwayland-dev libxkbcommon-dev
 
             # Install GCC (Linux only)
             - name: Install GCC 12 (Linux)
@@ -49,12 +49,12 @@ jobs:
                 version: 12
                 platform: x64
 
-            # Install Clang 17 (Linux only)
-            - name: Install Clang 17 (Linux)
+            # Install Clang 19 (Linux only)
+            - name: Install Clang 19 (Linux)
               if: matrix.compiler == 'clang'
               uses:  egor-tensin/setup-clang@v1
               with:
-                version: 17
+                version: 19
                 platform: x64
 
             # Configure the Coral CMake project
