--- a/tools/CoralShaderCompiler/CMakeLists.txt
+++ b/tools/CoralShaderCompiler/CMakeLists.txt
@@ -28,12 +28,10 @@ source_group("cmake/" FILES ${CORAL_SHADER_COMPILER_CMAKE_FILE})
 
 add_library(${CORAL_SHADER_COMPILER_TARGET_NAME} STATIC)
 
-find_package(shaderc)
-
 coral_configure_target(${CORAL_SHADER_COMPILER_TARGET_NAME}
-          PUBLIC_HEADERS
-            ${CORAL_SHADER_COMPILER_PUBLIC_INCLUDES}
-          SOURCES
-            ${CORAL_SHADER_COMPILER_SOURCES}
-        PRIVATE_DEPENDENCIES
-            shaderc::shaderc)
+    PUBLIC_HEADERS
+        ${CORAL_SHADER_COMPILER_PUBLIC_INCLUDES}
+    SOURCES
+        ${CORAL_SHADER_COMPILER_SOURCES}
+    PRIVATE_DEPENDENCIES
+        shaderc)
