--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,17 @@ jobs:
                       cmake-generator: Visual Studio 17 2022
                       additional-cmake-args:
                       cmake-args: "-DCMAKE_CONFIGURATION_TYPES=Release"
-                    - name: Linux Clang 17
+                      compiler: "msvc"
+                    - name: Linux GCC 12
                       os: ubuntu-latest
                       cmake-generator: Unix Makefiles
                       cmake-args: "-DCMAKE_BUILD_TYPE=Release -DCORAL_BUILD_TESTS=OFF -DCORAL_BUILD_EXAMPLES=OFF"
+                      compiler: "gcc"
+                    - name: Linux Clang 19
+                      os: ubuntu-latest
+                      cmake-generator: Unix Makefiles
+                      cmake-args: "-DCMAKE_BUILD_TYPE=Release -DCORAL_BUILD_TESTS=OFF -DCORAL_BUILD_EXAMPLES=OFF"
+                      compiler: "clang"
         steps:
             # Checkout the Coral repository
             - name: Checkout
@@ -28,35 +35,27 @@ jobs:
               with:
                 lfs: true
 
-            # Install GCC (Linux only)
-            - name: Install GCC 17 (Linux)
+            - name: Install Ubuntu build dependencies
               if: runner.os == 'linux' 
+              run: |
+                    sudo apt update
+                    sudo apt install libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev libwayland-dev libxkbcommon-dev
+
+            # Install GCC (Linux only)
+            - name: Install GCC 12 (Linux)
+              if: matrix.compiler == 'gcc'
               uses:  egor-tensin/setup-gcc@v1
               with:
                 version: 12
                 platform: x64
 
-            # Install Clang 17 (Linux only)
-            #- name: Install Clang 17 (Linux)
-            #  if: runner.os == 'linux' 
-            #  uses:  egor-tensin/setup-clang@v1
-            #  with:
-            #    version: 17
-            #    platform: x64
-
-            # Install Conan to obtain third-party libraries
-            # Note: Conan dependencies are fetched during CMake configure step
-            - name: Install Conan
-              uses: turtlebrowser/get-conan@v1.2
+            # Install Clang 19 (Linux only)
+            - name: Install Clang 19 (Linux)
+              if: matrix.compiler == 'clang'
+              uses:  egor-tensin/setup-clang@v1
               with:
-                version: 1.66
-
-            - name: Create default Conan profile
-              run: conan profile new default --detect
-
-            - name: Update Conan profile
-              if: runner.os == 'linux' 
-              run: conan profile update settings.compiler=clang default
+                version: 19
+                platform: x64
 
             # Configure the Coral CMake project
             - name: Configure CMake
