--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,10 +20,10 @@ add_executable(${CORAL_UNIT_TESTS_TARGET_NAME})
 ###############################################################################
 
 set(CORAL_UNIT_TESTS_INCLUDES
-    ${CORAL_RESOURCE_DIRECTORY}/Cube.hpp 
-    ${CORAL_UNIT_TESTS_SRC_DIR}/Catch.hpp)
+    ${CORAL_RESOURCE_DIRECTORY}/include/Cube.hpp)
 
 set(CORAL_UNIT_TESTS_SOURCES
+    ${CORAL_UNIT_TESTS_SRC_DIR}/Catch.hpp
     ${CORAL_UNIT_TESTS_SRC_DIR}/Catch.cpp
     ${CORAL_UNIT_TESTS_SRC_DIR}/ContextTests.cpp
     ${CORAL_UNIT_TESTS_SRC_DIR}/BufferTests.cpp
@@ -70,11 +70,6 @@ source_group("Shaders" FILES ${CORAL_UNIT_TESTS_SHADER_SOURCES})
 # Configure the target
 ###############################################################################
 
-find_package(glm)
-find_package(glfw3)
-find_package(stb)
-find_package(Catch2)
-
 coral_configure_target(${CORAL_UNIT_TESTS_TARGET_NAME}
     SOURCES
         ${CORAL_UNIT_TESTS_SOURCES}
@@ -83,8 +78,7 @@ coral_configure_target(${CORAL_UNIT_TESTS_TARGET_NAME}
         ${CORAL_UNIT_TESTS_GENERATED_SHADER_HEADERS}
     PRIVATE_DEPENDENCIES
         glm::glm
-        glfw::glfw
-        stb::stb
+        stb
         Coral
         Catch2::Catch2WithMain)
 
