Improvements to ShaderLanguage. Fixed alignment in UniformBlockBuilder

--- a/src/Coral/CMakeLists.txt
+++ b/src/Coral/CMakeLists.txt
@@ -57,6 +57,7 @@ set(CORAL_PUBLIC_INCLUDES
 set(CORAL_SOURCES
     ${CORAL_SOURCE_DIR}/BufferPool.cpp
     ${CORAL_SOURCE_DIR}/BufferPool.hpp
+    ${CORAL_SOURCE_DIR}/Finally.hpp
     ${CORAL_SOURCE_DIR}/Context.cpp
     ${CORAL_SOURCE_DIR}/PipelineState.cpp
     ${CORAL_SOURCE_DIR}/UniformBlockBuilder.cpp)
