Refactored ShaderGraph. Removed shaderc

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -7,7 +7,7 @@ include(vma.cmake)
 include(volk.cmake)
 
 include(cli11.cmake)
-include(shaderc.cmake)
+include(glslang.cmake)
 
 include(catch2.cmake)
 include(glfw.cmake)
@@ -39,4 +39,5 @@ foreach (target ${all_targets})
         set(new_folder "deps/${folder}")
     endif()
     set_target_properties(${target} PROPERTIES FOLDER "${new_folder}")
+    set_target_properties(${target} PROPERTIES EXCLUDE_FROM_ALL TRUE)
 endforeach()
