Improvements to Coral Vulkan usage
* Switched from DescriptorSets to push descriptors
* Reverted Semaphore to binary semaphore for better swapchain handling
* Refactored BufferPool to use smart pointers
* Refactored image layout transfer for swapchain images

--- a/examples/CoralDemoApp/CMakeLists.txt
+++ b/examples/CoralDemoApp/CMakeLists.txt
@@ -44,7 +44,7 @@ coral_configure_target(${CORAL_DEMO_APP_TARGET_NAME}
         glfw
         stb
         Coral
-        CSL)
+        CoralShaderLanguage)
 
 ###############################################################################
 # Copy the resource files
