--- a/src/ShaderLanguage/CMakeLists.txt
+++ b/src/ShaderLanguage/CMakeLists.txt
@@ -1,14 +1,14 @@
-###############################################################################
+#######################################################################################################################
 # This file contains the build configuration for the Coral Shader Language (CSL) library.
-###############################################################################
+#######################################################################################################################
 
-set(CSL_TARGET_NAME CSL)
+set(CORALSHADERLANGUAGE_TARGET_NAME CoralShaderLanguage)
 
-###############################################################################
+#######################################################################################################################
 # Build the library as static or shared
-###############################################################################
+#######################################################################################################################
 
-option(CSL_BUILD_SHARED_LIBRARY "Build and link ${CSL_TARGET_NAME} as a shared library" OFF)
+option(CSL_BUILD_SHARED_LIBRARY "Build and link ${CORALSHADERLANGUAGE_TARGET_NAME} as a shared library" OFF)
 
 if (CSL_BUILD_SHARED_LIBRARY)
     set(CSL_TARGET_TYPE SHARED)
@@ -16,15 +16,15 @@ else()
     set(CSL_TARGET_TYPE STATIC)
 endif()
 
-###############################################################################
+#######################################################################################################################
 # Create the CSL library
-###############################################################################
+#######################################################################################################################
 
-add_library(${CSL_TARGET_NAME} ${CSL_TARGET_TYPE})
+add_library(${CORALSHADERLANGUAGE_TARGET_NAME} ${CSL_TARGET_TYPE})
 
-###############################################################################
+#######################################################################################################################
 # Add the source files to the library
-###############################################################################
+#######################################################################################################################
 
 # Location of the public Coral library include files
 set(CSL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include/Coral)
@@ -58,11 +58,11 @@ set(CSL_SOURCES
     ${CSL_SOURCE_DIR}/ShaderGraph.cpp)
 
 
-###############################################################################
+#######################################################################################################################
 # Link the CSL library with the following libraries
-###############################################################################
+#######################################################################################################################
 
-coral_configure_target(${CSL_TARGET_NAME}
+coral_configure_target(${CORALSHADERLANGUAGE_TARGET_NAME}
     PUBLIC_HEADERS 
         ${CSL_SHADERGRAPH_HEADERS}
         ${CSL_HEADERS}
@@ -75,9 +75,9 @@ coral_configure_target(${CSL_TARGET_NAME}
         glslang-default-resource-limits
     )
 
-###############################################################################
+#######################################################################################################################
 # Organize files in the IDE
-###############################################################################
+#######################################################################################################################
 
 source_group("include/Coral" FILES ${CSL_HEADERS})
 source_group("include/Coral/ShaderGraph" FILES ${CSL_SHADERGRAPH_HEADERS})
